tests/baselines/reference/privateNameWeakMapCollision.errors.txt
tests/cases/compiler/privateNameWeakMapCollision.ts(2,9): error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.


==== tests/cases/compiler/privateNameWeakMapCollision.ts (1 errors) ====
    function test() {
        let WeakMap;
            ~~~~~~~
!!! error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.
        class C {
            #x;
        }
    }
    